pike7.7 (7.7.21-1) experimental; urgency=low

  * The latest cvs snapshot
  * Updated the Standards-Version, no changes
  * Using own version of specs.in, since the pike-generated one does not
    make sense on a Debian system.
  * Implemented configurable include_prefix for the install process
  * GTK v1 is no longer used. Using GTK v2 and GNOME v2.x instead
  * Turned on several experimental features, for wider testing
  * Added new modules:
     - SQLite
     - Fuse
     - DNS-SD (libhowl)

 -- Marek Habersack <grendel@debian.org>  Fri, 3 Jun 2005 16:45:28 +0200

pike7.7 (7.7.20-1) experimental; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Fri, 3 Jun 2005 16:42:30 +0200

pike7.7 (7.7.19-1) experimental; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Wed, 18 May 2005 1:03:33 +0200

pike7.7 (7.7.18-1) experimental; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Wed, 18 May 2005 0:57:01 +0200

pike7.7 (7.7.17-1) experimental; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Mon, 9 May 2005 14:40:16 +0200

pike7.7 (7.7.16-1) experimental; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Mon, 9 May 2005 14:39:05 +0200

pike7.7 (7.7.15-1) experimental; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Wed, 30 Mar 2005 21:17:50 +0200

pike7.7 (7.7.14-1) experimental; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Wed, 30 Mar 2005 21:16:29 +0200

pike7.7 (7.7.13-1) experimental; urgency=low

  * The latest cvs snapshot

 -- Marek Habersack <grendel@debian.org>  Wed, 8 Dec 2004 1:10:59 +0100

pike7.7 (7.7.12-1) experimental; urgency=low

  * Release number bumped by export.pike.

 -- Marek Habersack <grendel@debian.org>  Wed, 8 Dec 2004 1:06:41 +0100
