@@ -1,4 +1,4 @@
-# $Id: configure.in,v 1.2 2005/09/03 02:41:41 grendel Exp $
+# $Id: configure.in,v 1.3 2005/09/03 03:21:21 grendel Exp $
 
 AC_INIT(sd.c)
 AC_CONFIG_HEADER(config.h)
@@ -23,7 +23,7 @@ if test x$with_dnssd = xyes ; then
     AC_DEFINE(HAVE_HOWL)
     AC_CHECK_LIB(howl, sw_discovery_init, [
       PIKE_FEATURE(DNS-SD,[yes (howl.h)])
-      LIBS="{$LIBS-} -lhowl"
+      LIBS="${LIBS} -lhowl"
     ])
   fi
 fi
